@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed label alignment (STR #2436)
 	- Added interface to set color chooser mode (STR #2407)
 	- Fixed compile errors when HAVE_LIBJPEG was not defined 
 	  (STR #2382)
